@@ -28,9 +28,14 @@
  */
 package org.n52.stream;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Collections;
 
 import javax.inject.Named;
@@ -54,7 +59,8 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 /**
- * @author <a href="mailto:e.h.juerrens@52north.org">J&uuml;rrens, Eike Hinderk</a>
+ * @author <a href="mailto:e.h.juerrens@52north.org">J&uuml;rrens, Eike
+ * Hinderk</a>
  */
 @Configuration
 public class SensorMLRetriever {
@@ -68,29 +74,45 @@ public class SensorMLRetriever {
     @Named("sensorml")
     public AggregateProcess loadSensorML(@Value("${org.n52.stream.sensormlurl}") String url)
             throws DecodingException, XmlException, IOException {
-        URI sensormlUrl = null;
+        LOG.info(url);
+        URL sensormlUrl = null;
         try {
-            sensormlUrl = new URI(url);
-        } catch (URISyntaxException e) {
-            String msg = String.format("Setting 'sensorml-url' malformed: %s (set loglevel to 'TRACE' for stacktrace)",
+            sensormlUrl = new URL(url);
+            LOG.info(sensormlUrl.toString());
+        } catch (MalformedURLException e) {
+            String msg = String.format("Setting 'sensormlurl' malformed: %s (set loglevel to 'TRACE' for stacktrace)",
                     e.getMessage());
             LOG.error(msg);
             LOG.trace("Exception thrown: ", e);
         }
-        ResponseEntity<String> responseDocument = null;
+        /*ResponseEntity<String> responseDocument = null;*/
+        String responseDocument = "";
         try {
-            RestTemplate restClient = new RestTemplate();
+            /*RestTemplate restClient = new RestTemplate();
             HttpHeaders headers = new HttpHeaders();
             headers.setAccept(Collections.singletonList(MediaType.APPLICATION_XML));
             HttpEntity<String> entity = new HttpEntity<>(headers);
-            responseDocument = restClient.exchange(sensormlUrl, HttpMethod.GET, entity, String.class);
+            responseDocument = restClient.exchange(sensormlUrl, HttpMethod.GET, entity, String.class);*/
+            HttpURLConnection conn = (HttpURLConnection) sensormlUrl.openConnection();
+//            conn.setRequestProperty("Accept", "application/xml");
+            conn.setRequestMethod("GET");
+            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            String line;
+            StringBuffer res = new StringBuffer();
+            while ((line = in.readLine()) != null) {
+                res.append(line);
+                res.append("\n");
+            }
+            in.close();
+            conn.disconnect();
+            responseDocument = res.toString();
         } catch (RestClientException e) {
             logAndThrowException(sensormlUrl, e);
         }
-        if (!responseDocument.getStatusCode().is2xxSuccessful()) {
-            logAndThrowException(sensormlUrl, new RuntimeException("HttpResponseCode != 2xx."));
-        }
-        Object decodedGetResponse = decoderHelper.decode(responseDocument.getBody());
+//        if (!responseDocument.getStatusCode().is2xxSuccessful()) {
+//            logAndThrowException(sensormlUrl, new RuntimeException("HttpResponseCode != 2xx."));
+//        }
+        Object decodedGetResponse = decoderHelper.decode(responseDocument/*.getBody()*/);
         if (decodedGetResponse instanceof AggregateProcess) {
             return (AggregateProcess) decodedGetResponse;
         } else {
@@ -103,8 +125,8 @@ public class SensorMLRetriever {
         }
     }
 
-    private void logAndThrowException(URI sensormlUrl, Exception e) throws RuntimeException {
-        String msg = String.format("Error while retrieving file from sensorml-url ('%s') :"
+    private void logAndThrowException(URL sensormlUrl, Exception e) throws RuntimeException {
+        String msg = String.format("Error while retrieving file from sensormlurl ('%s') :"
                 + " %s (set loglevel to 'TRACE' for stacktrace)",
                 sensormlUrl.toString(),
                 e.getMessage());
